# oxypki

./: .gitignore  Cargo.toml  justfile  readme.md  rustfmt.toml
src/: certificate.rs  error.rs  main.rs
src/utils/: fileio.rs  format.rs  mod.rs
testcert/: aa.cert  aa.der  aa.key  certs.pem:Zone.Identifier  sm2.pem
